--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,11 +18,11 @@ steps:
   # Clone from GitHub
   - checkout: self  # Ensures latest code is pulled from the GitHub repo
 
-  # Install .NET SDK
+  # Install .NET 8.0 SDK
   - task: UseDotNet@2
     inputs:
       packageType: sdk
-      version: '7.x'
+      version: '8.x'  # Change this to '8.x' for .NET 8.0 SDK
       installationPath: $(Agent.ToolsDirectory)/dotnet
 
   # Restore, Build, and Test
@@ -37,6 +37,7 @@ steps:
     inputs:
       pathToPublish: '$(Build.ArtifactStagingDirectory)'
       artifactName: 'drop'
+
 
 
 
