Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,8 +13,8 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  solution: '*/.sln'
-  projects: '*/.csproj'
+  solution: '**/*.sln'
+  projects: '**/*.csproj'
 
 steps:
 - task: UseDotNet@2
